--- a/my-project/index.html
+++ b/my-project/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>my-project</title>
+    <!-- <link rel="stylesheet" href="src/assets/home.css">
+    <link rel="stylesheet" href="src/assets/layout.css"> -->
   </head>
   <body>
     <div id="app"></div>
