--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0,user-scalable=no">
-    <link href="https://cdn.bootcss.com/animate.css/3.5.2/animate.css" rel="stylesheet">
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <!-- <script src="https://cdn.bootcss.com/jquery/2.2.1/jquery.js"></script>-->
-    <title>wapchat</title>
+    <title>vue chat</title>
   </head>
   <body>
     <div id="app"></div>
-   <!--  http://www.jb51.net/article/123979.htm -->
   </body>
 </html>
